drone funzionante ma non sta in volo

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,10 @@
 platform = espressif8266
 board = d1_mini_lite
 framework = arduino
-lib_deps = tockn/MPU6050_tockn@^1.5.2
+lib_deps = 
+	tockn/MPU6050_tockn@^1.5.2
+	arduino-libraries/Arduino_JSON@^0.2.0
+	mathieucarbou/ESPAsyncWebServer@^3.6.0
+	me-no-dev/ESPAsyncTCP@^2.0.0
 upload_speed = 921600
 monitor_speed = 250000
