--- a/platformio.ini
+++ b/platformio.ini
@@ -8,14 +8,16 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:d1_mini_lite]
-platform = espressif8266
-board = d1_mini_lite
+[env:esp32]
+platform = espressif32@6.1.0
+board = esp32-c3-devkitm-1
 framework = arduino
+board_build.f_cpu = 160000000L
 lib_deps = 
 	tockn/MPU6050_tockn@^1.5.2
 	arduino-libraries/Arduino_JSON@^0.2.0
-	mathieucarbou/ESPAsyncWebServer@^3.6.0
-	me-no-dev/ESPAsyncTCP@^2.0.0
+	esp32async/AsyncTCP @ ^3.3.8
+	esp32async/ESPAsyncWebServer @ ^3.7.6
 upload_speed = 921600
-monitor_speed = 250000
+monitor_speed = 500000
+board_build.usb_cdc_on_boot_enable = yes
