madgwick filter per roll e pitch

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,12 +18,10 @@ lib_deps =
 	arduino-libraries/Arduino_JSON@^0.2.0
 	esp32async/AsyncTCP @ ^3.3.8
 	esp32async/ESPAsyncWebServer @ ^3.7.6
-
+	arduino-libraries/Madgwick@^1.2.0
 board_build.filesystem = littlefs
-
-build_flags =
-  -D ARDUINO_USB_CDC_ON_BOOT=1    ; abilita la CDC USB al boot
-  -D ARDUINO_USB_MODE=1           ; 0 = “Hardware CDC and JTAG” (default USB+JTAG)
+build_flags = 
+	-D ARDUINO_USB_CDC_ON_BOOT=1
+	-D ARDUINO_USB_MODE=1
 upload_speed = 921600
 monitor_speed = 115200
-
