--- a/platformio.ini
+++ b/platformio.ini
@@ -14,11 +14,11 @@ board = esp32-c3-devkitm-1
 framework = arduino
 board_build.f_cpu = 160000000L
 lib_deps = 
-	tockn/MPU6050_tockn@^1.5.2
 	arduino-libraries/Arduino_JSON@^0.2.0
 	esp32async/AsyncTCP @ ^3.3.8
 	esp32async/ESPAsyncWebServer @ ^3.7.6
 	arduino-libraries/Madgwick@^1.2.0
+	electroniccats/MPU6050@^1.4.4
 board_build.filesystem = littlefs
 build_flags = 
 	-D ARDUINO_USB_CDC_ON_BOOT=1
